<resources>
    <string name="app_name">Allowance Tracker</string>
    <string name="overview">Overview</string>
    <string name="new_child">New Child</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="login_button">Login</string>
    <string name="login_title">Allowance\nTracker</string>
    <string name="transactions_cleared">Transactions cleared!</string>
    <string name="children_cleared">Children cleared!</string>
    <string name="logout">Logout</string>
    <string name="add_a_child">You have not yet added a child.\nClick the + button!</string>
    <string name="add_a_transaction">You have not yet added any allowance.\nClick the + button!</string>
    <string name="no_notifications">You have not yet received any notifications.</string>
    <string name="cd_add_new_child">Add New Child</string>
    <string name="cd_add_new_transaction">Add New Transaction</string>
    <string name="child_name_title">Name: </string>
    <string name="it_name_title">Name:</string>
    <string name="child_age_title">Age</string>
    <string name="it_age_title">Age:</string>
    <string name="transaction_description_title">Description: </string>
    <string name="transaction_spending_title">Spending: </string>
    <string name="transaction_savings_title">Savings: </string>
    <string name="transaction_date_title">Date</string>
    <string name="child_birthday_title">Birthday</string>
    <string name="err_enter_name">You must enter a child\'s name to save.</string>
    <string name="err_enter_amount">You must enter an amount to save.</string>
    <string name="err_invalid_format_amount">You must format the amount correctly.</string>
    <string name="child_saved">Child Saved!</string>
    <string name="transaction_saved">Transaction Saved!</string>
    <string name="transaction_deleted">Transaction Deleted!</string>
    <string name="savings_reset">Savings owed reset!</string>
    <string name="child_updated">Child Updated!</string>
    <string name="hint_edit_child_name">Your child\'s name (required)</string>
    <string name="hint_edit_child_age">Your child\'s age (optional)</string>
    <string name="hint_edit_child_birthday">Your child\'s birthday (optional)</string>
    <string name="hint_edit_transaction_description">The transaction description</string>
    <string name="hint_edit_transaction_amount">Total Amount</string>
    <string name="hint_edit_transaction_date">The transaction date</string>
    <string name="cd_saveChild">Click to save</string>
    <string name="cd_editChild">Clidk to edit child information</string>
    <string name="cd_quote_background">Inspirational picture</string>
    <string name="transactions_title">Transactions</string>
    <string name="notification_history_title">Notification history</string>
    <string name="notifications_title">Send notification</string>
    <string name="transaction_details_title">Transaction Details</string>
    <string name="transaction_save_error">Sorry, we could not save your transaction at this time.</string>
    <string name="transaction_delete_error">Sorry, we could not delete your transaction at this time.</string>
    <string name="savings_reset_error">Sorry, we could not reset the savings owed at this time.</string>
    <string name="delete">Delete</string>
    <string name="total">Total</string>
    <string name="channel_name">notifications</string>
    <string name="channel_description">Allowance Tracker Notifications</string>
    <string name="channel_id">"3"</string>
    <string name="savings_title">Savings Owed:</string>
    <string name="total_title">Total:</string>
    <string name="spending_title">Spending:</string>
    <string name="savings_title_2">Savings:</string>
    <string name="reset_savings_title">Reset savings owed</string>
    <string name="send_message_title">Send message</string>
    <string name="child_s_name">Child\'s Name</string>
    <string name="amount">Amount</string>
    <string name="disable_savings_for_this_transaction">Disable savings for this transaction</string>
    <string name="transaction_details_name_title">Name: </string>
    <string name="transaction_details_total_title">Total: </string>
    <string name="transaction_details_amount_title">Spending: </string>
    <string name="transaction_details_savings_title">Savings: </string>
    <string name="dollar_sign">$</string>
    <string name="enter_chat_message">Enter chat message</string>
    <string name="submit">Submit</string>
    <string name="space" />
    <string name="not_available">N/A</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="send_notification">Send notification</string>
    <string name="notification_history">Notification History</string>
    <string name="received"><b>Received: </b></string>
    <string name="from"><b>Title: </b></string>
    <string name="message"><b>Message: </b></string>
</resources>