<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hooware.allowancetracker.overview.OverviewViewModel" />

        <variable
            name="selectedChild"
            type="com.hooware.allowancetracker.children.ChildDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!-- Static -->
        <TextView
            android:id="@+id/child_name_title"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Fade Group - Edit Name -->
        <EditText
            android:id="@+id/_edit_child_name"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:enabled="true"
            android:fadeVisible="@{viewModel.editChildDetails.booleanValue()}"
            android:hint="@string/hint_edit_child_name"
            android:inputType="text"
            android:text="@={selectedChild.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/child_name_title"
            tools:text="Laavingonn" />

        <TextView
            android:id="@+id/edit_child_name"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            android:text="@{selectedChild.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/child_name_title"
            tools:text="Laavingonn" />

        <!-- Fade Group - Age Title -->
        <TextView
            android:id="@+id/child_age_title"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            android:text="@string/child_age_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_child_name" />

        <TextView
            android:id="@+id/_child_age_title"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.editChildDetails.booleanValue()}"
            android:text="@string/child_age_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_edit_child_name" />

        <!-- Fade Group - Edit Age -->
        <EditText
            android:id="@+id/_edit_child_age"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="age"
            android:enabled="true"
            android:fadeVisible="@{viewModel.editChildDetails.booleanValue()}"
            android:hint="@string/hint_edit_child_age"
            android:inputType="number"
            android:text="@={selectedChild.age}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_child_age_title"
            tools:text="10" />

        <TextView
            android:id="@+id/edit_child_age"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            android:text="@{selectedChild.age}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/child_age_title" />

        <TextView
            android:id="@+id/child_birthday_title"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            android:text="@string/child_birthday_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_child_age" />

        <TextView
            android:id="@+id/_child_birthday_title"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.editChildDetails.booleanValue()}"
            android:text="@string/child_birthday_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_edit_child_age" />

        <EditText
            android:id="@+id/_edit_child_birthday"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="date"
            android:enabled="true"
            android:fadeVisible="@{viewModel.editChildDetails.booleanValue()}"
            android:hint="@string/hint_edit_child_birthday"
            android:inputType="date"
            android:text="@={selectedChild.birthday}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_child_birthday_title"
            tools:text="08/02/2010" />

        <TextView
            android:id="@+id/edit_child_birthday"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            android:text="@{selectedChild.birthday}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/child_birthday_title" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_child_birthday"
            tools:context=".children.ChildDetailsFragment">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:fillViewport="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/transactionsRecyclerView"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constrainedHeight="true"
                    android:liveData="@{viewModel.transactionsList}" />
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/noTransactionDataTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_normal"
            android:fadeVisible="@{viewModel.showNoTransactionData.booleanValue() &amp;&amp; !viewModel.editChildDetails.booleanValue()}"
            android:gravity="center"
            android:text="@string/add_a_transaction"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fadeVisible="@{viewModel.showTransactionsLoading.booleanValue()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/initiate_edit_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_editChild"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/save_edit_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_saveChild"
            android:fadeVisible="@{viewModel.editChildDetails.booleanValue()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_save_vector" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTransactionFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/cd_add_new_transaction"
            android:fadeVisible="@{!viewModel.editChildDetails.booleanValue()}"
            app:fabSize="normal"
            app:layout_anchor="@id/refreshLayout"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
