<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="requestInputTO"
            type="com.hooware.allowancetracker.to.FCMRequestInputTO" />
        <variable
            name="viewModel"
            type="com.hooware.allowancetracker.transactions.TransactionsViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/transactions_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeVisible="@{true}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal">

            <TextView
                android:id="@+id/title_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <EditText
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@{requestInputTO.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_title" />

            <TextView
                android:id="@+id/body_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Body" />

            <EditText
                android:id="@+id/body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:minLines="3"
                android:text="@{requestInputTO.body}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_notification_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/send_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</layout>
